--- a/console.html
+++ b/console.html
@@ -200,7 +200,7 @@
   🔗 LinkedIn: <a href="https://linkedin.com/in/vaibhavrawatdev" target="_blank">vaibhavrawatdev</a><br>
   📺 YouTube: <a href="https://youtube.com/@vaibhavrawat" target="_blank">@vaibhavrawat</a>`,
 
-  resume: () => `📄 <a href="https://your-resume-link.com" target="_blank">Click here to view/download my resume</a>`,
+  resume: () => `📄 <a href="https://drive.google.com/file/d/1lT58HRy_NiXFpr98KcscYJOVhZQsXjeH/view" target="_blank">Click here to view/download my resume</a>`,
   
   education: () => `🎓 Education:<br>
   - B.Tech CSE – Chandigarh Engineering College<br>
