--- a/index.html
+++ b/index.html
@@ -160,18 +160,33 @@
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
       z-index: 100;
       padding: 1rem;
+      max-height: 400px;
+      overflow-y: auto;
     }
 
     .chatbot-header {
       font-weight: bold;
       margin-bottom: 1rem;
+      text-align: center;
     }
 
-    .chatbot-response {
+    .chat-message {
       margin: 0.5rem 0;
       padding: 0.5rem;
-      background-color: var(--secondary);
       border-radius: 5px;
+      max-width: 80%;
+    }
+
+    .user-message {
+      background-color: var(--accent);
+      color: white;
+      align-self: flex-end;
+    }
+
+    .bot-message {
+      background-color: var(--secondary);
+      color: black;
+      align-self: flex-start;
     }
 
     .chatbot-input {
@@ -269,7 +284,7 @@
   <!-- Chatbot Modal -->
   <div class="chatbot-modal" id="chatbotModal">
     <div class="chatbot-header">Chatbot</div>
-    <div class="chatbot-response" id="chatbotResponse"></div>
+    <div id="chatbotResponse" style="display: flex; flex-direction: column;"></div>
     <input type="text" id="chatbotInput" class="chatbot-input" placeholder="Ask me anything..." />
     <button class="chatbot-button" onclick="getChatbotResponse()">Send</button>
   </div>
@@ -286,6 +301,14 @@
     function toggleChatbot() {
       const chatbotModal = document.getElementById('chatbotModal');
       chatbotModal.style.display = chatbotModal.style.display === 'block' ? 'none' : 'block';
+      if (chatbotModal.style.display === 'block') {
+        greetUser ();
+      }
+    }
+
+    function greetUser () {
+      const responseDiv = document.getElementById('chatbotResponse');
+      responseDiv.innerHTML += `<div class="chat-message bot-message">Hello! I'm your chatbot. How can I assist you today?</div>`;
     }
 
     function getChatbotResponse() {
@@ -293,6 +316,10 @@
       const responseDiv = document.getElementById('chatbotResponse');
       let response = '';
 
+      // User message
+      responseDiv.innerHTML += `<div class="chat-message user-message">${input}</div>`;
+
+      // Bot responses
       switch (input) {
         case 'what is your name?':
           response = "I'm Vaibhav Rawat, a passionate developer.";
@@ -306,12 +333,20 @@
         case 'what projects have you worked on?':
           response = "I've worked on projects like Secured Cloud Share and Smart Feedback Analyzer.";
           break;
+        case 'how can i contact you?':
+          response = "You can contact me via email at rawatvaibhav27@gmail.com.";
+          break;
+        case 'tell me about your education.':
+          response = "I have a Bachelor of Science in Computer Science from XYZ University.";
+          break;
         default:
-          response = "I'm sorry, I don't understand that.";
+          response = "I'm sorry, I don't understand that. Please ask something else.";
       }
 
-      responseDiv.innerHTML += `<div>${response}</div>`;
+      // Bot message
+      responseDiv.innerHTML += `<div class="chat-message bot-message">${response}</div>`;
       document.getElementById('chatbotInput').value = '';
+      responseDiv.scrollTop = responseDiv.scrollHeight; // Scroll to the bottom
     }
   </script>
 </body>
