--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       bottom: 100px;
       right: 25px;
       width: 300px;
-      background-color: white;
+      background-color: var(--secondary);
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.3);
       z-index: 100;
@@ -168,6 +168,7 @@
       font-weight: bold;
       margin-bottom: 1rem;
       text-align: center;
+      color: white;
     }
 
     .chat-message {
@@ -175,17 +176,16 @@
       padding: 0.5rem;
       border-radius: 5px;
       max-width: 80%;
+      color: white;
     }
 
     .user-message {
       background-color: var(--accent);
-      color: white;
       align-self: flex-end;
     }
 
     .bot-message {
       background-color: var(--secondary);
-      color: black;
       align-self: flex-start;
     }
 
