--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   <div class="section">
     <h2>Contact Me</h2>
     <p>Email: rawatvaibhav27@gmail.com</p>
-    <div class="social-links">
+<!--     <div class="social-links">
       <a href="https://linkedin.com/in/vaibhavrawat" target="_blank" title="LinkedIn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg" alt="LinkedIn">
       </a>
@@ -270,7 +270,7 @@
       <a href="https://leetcode.com/vaibhavrawat/" target="_blank" title="LeetCode">
         <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/LeetCode_logo_black.png" alt="LeetCode">
       </a>
-    </div>
+    </div> -->
   </div>
 
   <!-- Floating Action Buttons -->
