--- a/index.html
+++ b/index.html
@@ -229,13 +229,15 @@
     <h2>Skills</h2>
     <div class="card">
       <p>Programming Languages: Java, Kotlin, Python, JavaScript</p>
-      <p>Tools: Android Studio, Git, Visual Studio Code, Postman</p>
+      <p>Tools: Android Studio, Git, Visual Studio Code, Postman, Power Bi, Excel</p>
+      <p>Technologies & Frameworks: Andorid Development, Pandas</p>
     </div>
   </div>
 
   <div class="section">
     <h2>Education</h2>
-    <div class="card">Bachelor of Science in Computer Science - XYZ University (2018 - 2022)</div>
+    <div class="card">Bachelor of Technology in Computer Science & Engineering - CGC Jhanjeri (2024 - 2027)</div>
+    <div class="card">Diploma in Computer Science & Engineering - Mehr Chand Polytechnic College (2021 - 2024)</div>
   </div>
 
   <div class="section">
@@ -253,8 +255,8 @@
 
   <div class="section">
     <h2>Experience</h2>
-    <div class="card">Trainee at O7 Solutions as Android Developer (June 2023 - July 2023)</div>
     <div class="card">Founder at fork & flow (July 2025 - Present)</div>
+    <div class="card">Trainee at O7 Solutions as Android Developer (June 2023 - July 2023)</div>
   </div>
 
   <div class="section">
