--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   <style>
     :root {
-      --primary: #0f0f0f;
-      --secondary: #1a1a1a;
+      --primary: rgba(15, 15, 15, 0.8);
+      --secondary: rgba(26, 26, 26, 0.4);
       --accent: #6d28d9;
       --text: #f8f8f8;
       --text-secondary: #d1d5db;
@@ -23,13 +23,14 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: var(--primary);
+      background: linear-gradient(135deg, #0f0f0f, #1a1a1a, #000000);
       color: var(--text);
       min-height: 100vh;
       overflow-x: hidden;
       display: flex;
       flex-direction: column;
       align-items: center;
+      backdrop-filter: blur(8px);
     }
 
     .center-wrapper {
@@ -42,7 +43,7 @@
       font-size: 3.5rem;
       font-weight: 700;
       margin-bottom: 1rem;
-      background: linear-gradient(90deg, #ffffff, #aaaaaa);
+      background: linear-gradient(90deg, #ffffff, #8b5cf6, #6d28d9);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
@@ -52,41 +53,63 @@
       font-size: 1.2rem;
       color: var(--text-secondary);
       margin-bottom: 2rem;
+      opacity: 0.9;
     }
 
     .resume-btn {
       display: inline-block;
       padding: 1rem 2.5rem;
-      background-color: var(--accent);
+      background: rgba(109, 40, 217, 0.7);
       color: white;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 12px;
       font-weight: 600;
       font-size: 1.1rem;
       transition: all 0.3s ease;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 15px rgba(109, 40, 217, 0.4);
+      backdrop-filter: blur(6px);
     }
 
     .resume-btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 10px rgba(109, 40, 217, 0.3);
+      transform: translateY(-3px) scale(1.05);
+      background: rgba(139, 92, 246, 0.8);
+      box-shadow: 0 6px 18px rgba(139, 92, 246, 0.6);
     }
 
     .section {
       width: 80%;
       margin: 2rem 0;
       padding: 1rem;
-      background-color: var(--secondary);
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      background: rgba(26, 26, 26, 0.5);
+      border-radius: 15px;
+      box-shadow: 0 4px 25px rgba(0, 0, 0, 0.3);
+      backdrop-filter: blur(10px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .section h2 {
+      text-align: center;
+      margin-bottom: 1rem;
+      color: #ffffff;
+      font-weight: 600;
+      letter-spacing: 1px;
     }
 
     .card {
-      background-color: var(--accent);
+      background: rgba(109, 40, 217, 0.3);
       color: white;
       padding: 1rem;
-      border-radius: 8px;
+      border-radius: 12px;
       margin: 1rem 0;
+      box-shadow: 0 2px 10px rgba(109, 40, 217, 0.2);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(6px);
+      transition: transform 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-3px) scale(1.02);
+      box-shadow: 0 6px 15px rgba(109, 40, 217, 0.4);
     }
 
     .fab {
@@ -95,7 +118,7 @@
       right: 25px;
       width: 60px;
       height: 60px;
-      background-color: var(--accent);
+      background: rgba(109, 40, 217, 0.7);
       border-radius: 50%;
       color: white;
       font-size: 1.5rem;
@@ -106,62 +129,40 @@
       cursor: pointer;
       z-index: 99;
       transition: all 0.3s ease;
+      backdrop-filter: blur(6px);
     }
 
     .fab:hover {
-      transform: scale(1.1);
-      background-color: #8b5cf6;
+      transform: scale(1.15);
+      background: rgba(139, 92, 246, 0.9);
     }
 
     footer {
       margin-top: auto;
       padding: 1rem;
       text-align: center;
-      background-color: var(--secondary);
+      background: rgba(26, 26, 26, 0.4);
       width: 100%;
+      backdrop-filter: blur(8px);
+      border-top: 1px solid rgba(255,255,255,0.1);
     }
 
-    .social-links {
-      display: flex;
-      justify-content: center;
-      margin: 1rem 0;
-    }
-
-    .social-links a {
-      margin: 0 15px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 60px;
-      height: 60px;
-      border-radius: 50%;
-      background-color: var(--accent);
-      transition: background-color 0.3s ease;
-    }
-
-    .social-links img {
-      width: 30px; /* Adjust size as needed */
-      height: 30px; /* Adjust size as needed */
-    }
-
-    .social-links a:hover {
-      background-color: #8b5cf6;
-    }
-
-    /* Chatbot Modal Styles */
+    /* Chatbot Modal */
     .chatbot-modal {
       display: none;
       position: fixed;
       bottom: 100px;
       right: 25px;
       width: 300px;
-      background-color: var(--secondary);
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      background: rgba(26, 26, 26, 0.6);
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
       z-index: 100;
       padding: 1rem;
       max-height: 400px;
       overflow-y: auto;
+      backdrop-filter: blur(12px);
+      border: 1px solid rgba(255,255,255,0.1);
     }
 
     .chatbot-header {
@@ -177,39 +178,45 @@
       border-radius: 5px;
       max-width: 80%;
       color: white;
+      word-wrap: break-word;
     }
 
     .user-message {
-      background-color: var(--accent);
+      background: rgba(109, 40, 217, 0.6);
       align-self: flex-end;
     }
 
     .bot-message {
-      background-color: var(--secondary);
+      background: rgba(60, 60, 60, 0.5);
       align-self: flex-start;
     }
 
     .chatbot-input {
       width: 100%;
       padding: 0.5rem;
-      border: 1px solid var(--accent);
+      border: 1px solid rgba(109, 40, 217, 0.5);
       border-radius: 5px;
       margin-top: 0.5rem;
+      background: rgba(255,255,255,0.05);
+      color: white;
+      outline: none;
+      backdrop-filter: blur(4px);
     }
 
     .chatbot-button {
       margin-top: 0.5rem;
       padding: 0.5rem;
-      background-color: var(--accent);
+      background: rgba(109, 40, 217, 0.7);
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
       width: 100%;
+      transition: 0.3s ease;
     }
 
     .chatbot-button:hover {
-      background-color: #8b5cf6;
+      background: rgba(139, 92, 246, 0.8);
     }
   </style>
 </head>
