--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
   <div class="section">
     <h2>About Me</h2>
-    <p class="card">I am a passionate developer with a love for creating innovative solutions and engaging user experiences.</p>
+    <p class="card">I'm a 20-year-old tech enthusiast currently pursuing a B.Tech in Computer Science and Engineering (2024-27), having previously earned a Diploma in CSE (2021-24). With hands-on experience in Android development and software engineering, I am deeply passionate about pushing the boundaries of technology, building impactful solutions, and constantly expanding my expertise. Driven by curiosity and innovation, I thrive on exploring new technologies, collaborating with visionary minds, and turning bold ideas into reality.</p>
   </div>
 
   <div class="section">
@@ -268,7 +268,7 @@
 
   <div class="section">
     <h2>Contact Me</h2>
-    <p>Email: rawatvaibhav27@gmail.com</p>
+    <p><center>Email: rawatvaibhav27@gmail.com</center></p>
 <!--     <div class="social-links">
       <a href="https://linkedin.com/in/vaibhavrawat" target="_blank" title="LinkedIn">
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/LinkedIn_Logo.svg" alt="LinkedIn">
