--- a/index.html
+++ b/index.html
@@ -262,7 +262,8 @@
 
   <div class="section">
     <h2>Experience</h2>
-    <div class="card">Founder at fork & flow (July 2025 - Present)</div>
+    <div class="card">Operations Lead at TAC, CGC University (August 2025 - Present)</div>
+    <div class="card">Management & Social Media Coordinator at D4 Community (September 2024 - Present)</div>
     <div class="card">Trainee at O7 Solutions as Android Developer (June 2023 - July 2023)</div>
   </div>
 
