--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
   <div class="center-wrapper">
     <h1>I'm Vaibhav Rawat</h1>
     <p class="tagline">Creating digital experiences through code and design</p>
-    <a href="https://drive.google.com/file/d/1lT58HRy_NiXFpr98KcscYJOVhZQsXjeH/view?usp=sharing" class="resume-btn">Download Resume</a>
+    <!-- <a href="https://drive.google.com/file/d/1lT58HRy_NiXFpr98KcscYJOVhZQsXjeH/view?usp=sharing" class="resume-btn">Download Resume</a> -->
   </div>
 
   <div class="section">
